--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   provider: ^6.1.2
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.2
+  uuid: ^4.5.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
