--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   shared_preferences: ^2.5.2
   uuid: ^4.5.1
   shimmer: ^3.0.0
+  flutter_feather_icons: ^2.0.0+1
+  cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
