--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.1.2
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.2
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
